Add fixes for #33 and #34
Wrong encoding lead to erroneous documents on client side
