# swagger.json
@@ -105,6 +105,7 @@
 			"EConversionStatus": {
 				"enum": [
 					"converted",
+					"erroneous",
 					"in queue",
 					"processing"
 				],
@@ -115,12 +116,17 @@
 					"conversionId": {
 						"type": "string"
 					},
+					"failures": {
+						"type": "number",
+						"format": "double"
+					},
 					"status": {
 						"$ref": "#/components/schemas/EConversionStatus"
 					}
 				},
 				"required": [
 					"conversionId",
+					"failures",
 					"status"
 				],
 				"type": "object",
@@ -287,7 +293,7 @@
 	},
 	"info": {
 		"title": "unoconv-webservice",
-		"version": "0.5.1",
+		"version": "1.0.0",
 		"description": "REST api to convert files to different formats using unoconv",
 		"license": {
 			"name": "MIT"
@@ -353,6 +359,51 @@
 				"parameters": []
 			}
 		},
+		"/conversion/upload": {
+			"post": {
+				"operationId": "ConvertFileUpload",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IConversionProcessingResponse"
+								}
+							}
+						}
+					}
+				},
+				"description": "Adds the file from the request body to the internal conversion queue.\nThe files in queue will be processed after the FIFO principle.",
+				"tags": [
+					"Conversion"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"conversionFile": {
+										"type": "string",
+										"format": "binary"
+									},
+									"originalFormat": {
+										"type": "string"
+									},
+									"targetFormat": {
+										"type": "string"
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		},
 		"/conversion/{fileId}": {
 			"get": {
 				"operationId": "GetConvertedFile",
@@ -378,6 +429,43 @@
 						"description": "Unique identifier for the conversion of a file.",
 						"in": "path",
 						"name": "fileId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/conversion/{conversionId}/download": {
+			"get": {
+				"operationId": "GetConvertedFileDownload",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							},
+							"application/pdf": {
+								"schema": {
+									"type": "string",
+									"format": "byte"
+								}
+							}
+						}
+					}
+				},
+				"description": "Returns the current status for a conversion given a conversionId\nIf status is 'converted' the resulting converted file\nwill be available to download.",
+				"tags": [
+					"Conversion"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "the id of the file-conversion that is requested",
+						"in": "path",
+						"name": "conversionId",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -440,7 +528,7 @@
 	},
 	"servers": [
 		{
-			"url": "http://localhost:3000"
+			"url": "http://localhost:3000/"
 		}
 	]
 }
